force-app/main/default/objects/Draft_Email__c/Draft_Email__c.object-meta.xml
<CustomObject>
    <description>Draft Email</description>
    <label>Draft Email</label>
    <nameField>
        <label>Draft Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Draft Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>