force-app/main/default/objects/Draft_Email__c/fields/Additional_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Additional_To_Address__c</fullName>
    <description>Additional to address</description>
    <label>Additional To Address</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>