force-app/main/default/objects/Draft_Email__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Author</description>
    <label>Author</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Draft_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>