force-app/main/default/objects/Draft_Email__c/fields/Auto_Saved__c.field-meta.xml
<CustomField>
    <fullName>Auto_Saved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Saved</label>
    <type>Checkbox</type>
</CustomField>