force-app/main/default/objects/Draft_Email__c/fields/BCC_Address__c.field-meta.xml
<CustomField>
    <fullName>BCC_Address__c</fullName>
    <description>BCC addresses</description>
    <label>BCC Address</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>