force-app/main/default/objects/Draft_Email__c/fields/CC_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Address__c</fullName>
    <description>CC addresses</description>
    <label>CC Address</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>