force-app/main/default/objects/Draft_Email__c/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <description>Importance</description>
    <label>Importance</label>
    <length>10</length>
    <type>Text</type>
</CustomField>