force-app/main/default/objects/Draft_Email__c/fields/Internal_Use__c.field-meta.xml
<CustomField>
    <fullName>Internal_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal use - used for passing parameters to draft selector page</description>
    <label>Internal Use</label>
    <type>Checkbox</type>
</CustomField>