force-app/main/default/objects/Draft_Email__c/fields/Is_Html__c.field-meta.xml
<CustomField>
    <fullName>Is_Html__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is html draft email</description>
    <label>Html</label>
    <type>Checkbox</type>
</CustomField>