force-app/main/default/objects/Draft_Email__c/fields/Keep__c.field-meta.xml
<CustomField>
    <fullName>Keep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Keep</description>
    <label>Keep</label>
    <type>Checkbox</type>
</CustomField>